# aoc_2024

./: .gitignore  meson.build
benchmark/: all.cpp  all.hpp
src/: day01.cpp  day01.hpp  day02.cpp  day02.hpp  day03.cpp  day03.hpp  day04.cpp  day04.hpp  day05.cpp  day05.hpp
src/util/: fileio.hpp  matrix.hpp
